pe/2019.4/orchestrator_api_v1_endpoints.md
# Puppet orchestrator API v1 endpoints

Use this API to gather details about the orchestrator jobs you run.

-   **[Puppet orchestrator API: forming requests](orchestrator_api_forming_requests.md)**  
Instructions on interacting with this API.
-   **[Puppet orchestrator API: command endpoint](orchestrator_api_commands_endpoint.md#)**  
Use the `/command` endpoint to start and stop orchestrator jobs for tasks and plans.
-   **[Puppet orchestrator API: events endpoint](orchestrator_api_events.endpoint.md#)**  
Use the `/events` endpoint to learn about events that occurred during an orchestrator job.
-   **[Puppet orchestrator API: inventory endpoint](orchestrator_api_inventory.endpoint.md#)**  
Use the `/inventory` endpoint to discover which nodes can be reached by the orchestrator.
-   **[Puppet orchestrator API: jobs endpoint](orchestrator_api_jobs_endpoint.md#)**  
Use the `/jobs` endpoint to examine orchestrator jobs and their details.
-   **[Puppet orchestrator API: scheduled jobs endpoint](orchestrator_api_scheduled_jobs_endpoint.md#)**  
Use the `/scheduled_jobs` endpoint to gather information about orchestrator jobs scheduled to run.
-   **[Puppet orchestrator API: plans endpoint](orchestrator_api_plans_endpoint.md#)**  
Use the `/plans` endpoint to see all known plans in your environments.
-   **[Puppet orchestrator API: plan jobs endpoint](orchestrator_api_plan_jobs_endpoint.md#)**  
Use the `/plan_jobs` endpoint to view details about plan jobs you have run.
-   **[Puppet orchestrator API: tasks endpoint](orchestrator_api_tasks_endpoint.md#)**  
Use the `/tasks` endpoint to view details about the tasks pre-installed by PE and those you've installed.
-   **[Puppet orchestrator API: root endpoint](orchestrator_api_root.endpoint.md#)**  
Use the `/orchestrator` endpoint to return metadata about the orchestrator API.
-   **[Puppet orchestrator API: usage endpoint](orchestrator_api_usage_endpoint.md#)**  
 Use the `/usage` endpoint to view details about the active nodes in your deployment.
-   **[Puppet orchestrator API: scopes endpoint](orchestrator_api_scopes_endpoint.md#)**  
Use the `scopes` endpoint to retrieve resources for task constraints.
-   **[Puppet orchestrator API: error responses](orchestrator_api_error_responses.md)**  
From time to time, you might encounter an error using the orchestrator API. In such cases, you receive an error response.

**Parent topic:**[Orchestrating Puppet, tasks, and plans](orchestrating_puppet_and_tasks.md)

**Related information**  


[API index](api_index.md#)

